# ai-knowledge-assistant

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/app/: main.py
src/app/api/: health.py
src/app/core/: config.py
