[project]
name = "ai-knowledge-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "mypy>=2.2.0",
    "pydantic-settings>=2.14.2",
    "ruff>=0.15.20",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
